# camsource

./: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  camsource.conf.example  config.h.in  configure  configure.ac
autom4te.cache/: output.0  traces.0
scripts/: camsource2bmp.pl
src/: .cvsignore  Makefile.am  Makefile.in  bw.c  camdev.c  camdev.h  configfile.c  configfile.h  filewrite.c  filewrite.h  filter.c  filter.h  flip.c  flip.h  ftpup.c  ftpup.h  grab.c  grab.h  http.c  http.h  image.c  image.h  input_jpg.c  input_v4l.c  input_xwd.c  jpeg.c  jpeg.h  log.c  log.h  main.c  main.h  mod_handle.c  mod_handle.h  module.h  motiondetect.c  regrab.c  resize.c  resize.h  rgbbgr.c  rgbbgr.h  (+14 more)
